# app/Models/Task.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Task extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'description',
+        'body',
+        'done'
+    ];
+
+    protected $casts = [
+        'done' => 'boolean'
+    ];
+}
